
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct floppy_raw_cmd {int dummy; } ;


 int O_NDELAY ;
 int O_RDWR ;
 int close (int) ;
 int fd_recalibrate (int) ;
 int open (char*,int) ;
 int printf (char*) ;

int main(){
        printf("Start\n");
        char *d;
        struct floppy_raw_cmd *cmd;

        int fd;
        fd = open("/dev/fd0",O_RDWR | O_NDELAY);
        fd_recalibrate(fd);
        close(fd);
        printf("End\n");
        return 0;
}
